changed color scheme

--- a/index.html
+++ b/index.html
@@ -18,18 +18,26 @@
           <h1 class="text-center">nate joseph</h1>
           <h3 class="text-center">brooklyn, ny</h3>
           <div class="row text-center social-icon-row">
-            <button type="button" class="btn btn-default">
-                <a href="http://www.twitter.com/n8joseph" target="_blank" class="socicon socicon-twitter nohover"></a>
-            </button>
-            <button type="button" class="btn btn-default">
-                <a href="https://www.linkedin.com/in/natejoseph" target="_blank" class="socicon socicon-linkedin nohover"></a>
-            </button>
-            <button type="button" class="btn btn-default">
-                <a href="https://instagram.com/n8joseph/" target="_blank" class="socicon socicon-instagram nohover"></a>
-            </button>
-            <button type="button" class="btn btn-default">
-                <a id="mail" class="socicon socicon-mail nohover"></a>
-            </button>
+            <a href="http://www.twitter.com/n8joseph" target="_blank" class="nohover">
+              <button type="button" class="btn btn-default">
+                  <span class="socicon socicon-twitter"></span>
+              </button>
+            </a>
+            <a href="https://www.linkedin.com/in/natejoseph" target="_blank" class="nohover">
+              <button type="button" class="btn btn-default">
+                  <span class="socicon socicon-linkedin"></span>
+              </button>
+            </a>
+            <a href="https://instagram.com/n8joseph/" target="_blank" class="nohover">
+              <button type="button" class="btn btn-default">
+                  <span class="socicon socicon-instagram"></span>
+              </button>
+            </a>
+            <a id="mail" class="nohover">
+              <button type="button" class="btn btn-default">
+                  <span class="socicon socicon-mail"></span>
+              </button>
+            </a>
           </div> 
         </div>
 
