--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 LBlock">
-          <img src="pics/headshot.jpg" class="center-block img-circle img-responsive"/>
+          <img src="pics/headshot.jpg" class="center-block img-circle img-responsive headshot"/>
           <h1 class="text-center">nate joseph</h1>
-          <h3 class="text-center">brooklyn, ny</h3>
+          <h3 class="text-center"><img src="pics/greenlocation.png" class="location"/>brooklyn, ny</h3>
           <div class="row text-center social-icon-row">
             <a href="http://www.twitter.com/n8joseph" target="_blank" class="nohover">
               <button type="button" class="btn btn-default">
