tweaked helper text

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <span class="socicon socicon-mail"></span>
                 </button>
               </a>
-              <p class="imgDescription">don't be shy.</p>
+              <p class="imgDescription">shoot me an email.</p>
             </div>
 
           </div> 
